Trigger sub-menus on focus, hover, and active pseudo-classes
Add to work with re-enabling active pseudo-class on touch in mobile Safari
Related reading:
https://stackoverflow.com/questions/8330559/hover-effects-using-css3-touch-events/13080306#13080306
http://alxgbsn.co.uk/2011/10/17/enable-css-active-pseudo-styles-in-mobile-safari/
https://developer.apple.com/library/safari/technotes/tn2010/tn2262/_index.html
https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariWebContent/HandlingEvents/HandlingEvents.html

--- a/custom.css
+++ b/custom.css
@@ -221,6 +221,18 @@ div.gform_wrapper .gform_footer input[type="submit"]{
   color: #fff;
   background-color: transparent;
 }
+.genesis-nav-menu .menu-item:focus > .sub-menu {
+  left: auto;
+  opacity: 1;
+}
+.genesis-nav-menu .menu-item:hover > .sub-menu {
+  left: auto;
+  opacity: 1;
+}
+.genesis-nav-menu .menu-item:active > .sub-menu {
+  left: auto;
+  opacity: 1;
+}
 .genesis-nav-menu .sub-menu {
   border-top-color: #0c1640;
   border-top: thick;
