Use more abstract class selectors to style logo container
This will prevent problems from widget modifications changing id selectors, as long as mutliple text widgets are not used in the header widget area (Appearance > Widgets > Header Right)

Note: .header-widget-area .widget_text selector is enough to select, but must include .widget as well for selector to be more specific and take priority over others which override these rules
Learn more on CSS selector specificity here: http://www.w3.org/TR/CSS21/cascade.html#specificity

--- a/custom.css
+++ b/custom.css
@@ -177,7 +177,7 @@ div.gform_wrapper .gform_footer input[type="submit"]{
   width: 260px;
   margin-bottom: -110px;
 }
-#text-8{
+.header-widget-area .widget.widget_text {
   float:right;
   margin-top: -13rem;
 }
@@ -545,7 +545,7 @@ body.agency-pro-orange a{
   .home-bottom .featuredpost .entry{
     min-height: 360px;
   }
-  #text-8{
+  .header-widget-area .widget.widget_text {
     display: block;
     float: none;
     margin: 0px auto;
