Style Home Top text widget, add text-shadow for readability
Remove inline color style and <br> used for styling (shame on you) and implement in CSS
Add text-shadow for better readability, as text is hard to read when over top of lighter background imagery

--- a/custom.css
+++ b/custom.css
@@ -181,6 +181,11 @@ div.gform_wrapper .gform_footer input[type="submit"]{
   float:right;
   margin-top: -13rem;
 }
+#home-top .widget_text h2 {
+  color: #FFF;
+  margin-top: 1em;
+  text-shadow: 2px 2px 4px #000;
+}
 #nav_menu-4{
   margin-top: -1rem;
 }
