Remove dojo class so all sites have title display at top on narrowest device width
No longer hide site-title if not of dojo class
No longer apply dojo class to site-title element if a dojo site

Note: Applied on Oct 15th, but forgot to commit after uploading to production

--- a/custom.css
+++ b/custom.css
@@ -838,16 +838,10 @@ textarea {
 	.site-header .widget-area {
 		height: auto;
 	}
-	.site-title a {
-		display: none;
-	}
-	.site-title.dojo {
+	.site-title {
 		font-size: 1em;
 		font-weight: 700;
 		margin-bottom: 0.5em;
-	}
-	.site-title.dojo a {
-		display: block;
 	}
 	.title-area {
 		min-height: 0;
